--- a/shop84/templates/shop/product/list.html
+++ b/shop84/templates/shop/product/list.html
@@ -1,7 +1,7 @@
 {% extends "shop/base.html" %}
 {% block title %}My Portfolio{% endblock %}
 {% block content %}
-  <h1>My Blog</h1>
+  <h1>My Portfolio</h1>
     {% for post in posts %}
     <h2>
      <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
